completed portfolio page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             
             <hr class="my-2"> 
 
-                <img src="LinkedinPic.jpg" alt="Shuler MeHaffey">
+                <img id="profile-image" src="LinkedinPic.jpg" alt="Shuler MeHaffey">
             
                 <p>Hello, I'm Mark MeHaffey. I go by my middle name -- Shuler.
                         I always have and always will. My parents have both blessed me with a unique name and 
