--- a/portfolio.html
+++ b/portfolio.html
@@ -56,15 +56,24 @@
                             <div class="col-md-3">
                             </div>
                                 <div class="col-md-3">
-                                    <a href="https://www.espn.com" target="_blank"> 
-                                        <img src="placeholder.png" alt="Project1"> 
-                                    </a>
+                                    <div class="card"> 
+                                        <div class="card-block"> 
+                                                <a href="#" target="_blank"> 
+                                                <img src="placeholder.png" alt="Project2">
+                                                <a href="#" target="_blank" class="btn btn-primary"> Project 1 </a> 
+                                        </div> 
+                                    </div>
                                 </div>
                             <div class="col-md-3">
                             </div>
                                 <div class="col-md-3">
-                                    <a href="https://www.espn.com" target="_blank"> <img src="placeholder.png" alt="Project2"> 
-                                    </a>
+                                    <div class="card"> 
+                                        <div class="card-block"> 
+                                                <a href="#" target="_blank"> 
+                                                <img src="placeholder.png" alt="Project2">
+                                                <a href="#" target="_blank" class="btn btn-primary"> Project 2 </a> 
+                                        </div> 
+                                    </div>
                                 </div>
                         </div>
 
@@ -72,15 +81,24 @@
                                 <div class="col-md-3">
                                     </div>
                                         <div class="col-md-3">
-                                            <a href="https://www.espn.com" target="_blank"> 
-                                                <img src="placeholder.png" alt="Project1"> 
-                                            </a>
+                                            <div class="card">  
+                                                <div class="card-block"> 
+                                                        <a href="#" target="_blank"> 
+                                                        <img src="placeholder.png" alt="Project2">
+                                                        <a href="#" target="_blank" class="btn btn-primary"> Project 3 </a> 
+                                                </div> 
+                                            </div>
                                         </div>
                                     <div class="col-md-3">
                                     </div>
                                         <div class="col-md-3">
-                                            <a href="https://www.espn.com" target="_blank"> <img src="placeholder.png" alt="Project2"> 
-                                            </a>
+                                            <div class="card"> 
+                                                <div class="card-block"> 
+                                                        <a href="#" target="_blank"> 
+                                                        <img src="placeholder.png" alt="Project2">
+                                                        <a href="#" target="_blank" class="btn btn-primary"> Project 4 </a> 
+                                                </div> 
+                                            </div>
                                         </div>
                         </div>
 
@@ -88,15 +106,24 @@
                                 <div class="col-md-3">
                                     </div>
                                         <div class="col-md-3">
-                                            <a href="https://www.espn.com" target="_blank"> 
-                                                <img src="placeholder.png" alt="Project1"></a>
-                                                <p class="portfolio-label"> Project 1 </p>
+                                            <div class="card"> 
+                                                <div class="card-block"> 
+                                                        <a href="#" target="_blank"> 
+                                                        <img src="placeholder.png" alt="Project2">
+                                                        <a href="#" target="_blank" class="btn btn-primary"> Project 5 </a> 
+                                                </div> 
+                                            </div>
                                         </div>
                                     <div class="col-md-3">
                                     </div>
                                         <div class="col-md-3">
-                                            <a href="https://www.espn.com" target="_blank"> <img src="placeholder.png" alt="Project2"> 
-                                            </a>
+                                            <div class="card"> 
+                                                <div class="card-block"> 
+                                                        <a href="#" target="_blank"> 
+                                                        <img src="placeholder.png" alt="Project2">
+                                                        <a href="#" target="_blank" class="btn btn-primary"> Project 6 </a> 
+                                                </div> 
+                                            </div>
                                         </div>
                         </div>
 
