finished contact page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,7 @@
     </div>
 
     <footer class="footer">
-        <p> copyright </p>
+        <p> Shuler MeHaffey© </p>
     </footer>
 </body>
 </html>
