--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
     <footer class="footer">
-        <p> copyright </p>
+        <p> Shuler MeHaffey© </p>
     </footer>
 </body>
 </html>
