--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
         <div class="jumbotron"> 
             <div class="row">
-            <h1> About Me </h1> 
+            <h1> Contact </h1> 
             </div>
             
             <hr class="my-2"> 
